# datafusion_extension_type_examples

./: Cargo.toml  README.md
python/: Cargo.toml  pyproject.toml
python/examples/: example_scalar_udf.py
python/src/: lib.rs
rust/: Cargo.toml
rust/examples/: uuid_example.rs
rust/src/: lib.rs  string_conversion.rs  string_to_uuid.rs  uuid_to_string.rs  uuid_version.rs
